--- a/src/partials/_header.scss
+++ b/src/partials/_header.scss
@@ -1,5 +1,12 @@
 header {
     background-color: #d1d1d1;
+    padding: 10px 0;
+}
+
+header .container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .logo {
@@ -11,4 +18,15 @@ header {
     width: 100%;
     height: 100%;
     object-fit: contain;
+}
+
+.nav-menu ul li {
+    display: inline-block;
+}
+
+.nav-menu ul li a {
+    display: inline-block;
+    padding: 10px;
+    color: #000;
+    text-transform: uppercase;
 }
